# services/api/src/features/catalog.ts
@@ -122,12 +122,16 @@ export function toFoodSummary(food: FoodRecord): FoodSummary {
     foodId: food.food_id,
     foodGroup: food.food_group,
     foodGroupId: food.food_group_id,
+    foodSubgroup: food.food_subgroup,
+    foodSubgroupId: food.food_subgroup_id,
     gtin: food.gtin,
     name: food.name,
     nutrientBasis: food.nutrient_basis,
     nutrients: food.nutrients,
     portions: food.portions,
     protein: food.protein,
+    restaurant: food.restaurant,
+    restaurantId: food.restaurant_id,
     source: food.source,
     sourceId: food.source_id,
     totalFat: food.total_fat,
@@ -145,9 +149,15 @@ export function toFoodSearchResult(food: FoodSearchRecord): FoodSearchResult {
     foodId: food.food_id,
     foodGroup: food.food_group,
     foodGroupId: food.food_group_id,
+    foodSubgroup: food.food_subgroup,
+    foodSubgroupId: food.food_subgroup_id,
     name: food.name,
     nutrientBasis: food.nutrient_basis,
     protein: food.protein,
+    restaurant: food.restaurant,
+    restaurantId: food.restaurant_id,
+    source: food.source,
+    sourceId: food.source_id,
     totalFat: food.total_fat,
   }
 }
